--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -6,13 +6,10 @@
         fxFlex
     >
         <div fxLayout="row" fxLayoutAlign="start center" fxHide fxShow.gt-xs>
-            <a
-                mat-button
-                routerLink="/documentation/getting-started/introduction"
-                >Documentation</a
-            >
             <span>&bull;</span>
-            <a mat-button routerLink="/documentation/changelog">Changelog</a>
+            <a mat-button routerLink="/documentation/changelog"
+                >Era- client version 1</a
+            >
         </div>
     </div>
 </mat-toolbar>
