--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -1,16 +1,12 @@
-@import "src/@fuse/scss/fuse";
+@import 'src/@fuse/scss/fuse';
 
 fuse-sidebar {
-
     &.navbar-fuse-sidebar {
         overflow: hidden;
 
         &.folded:not(.unfolded) {
-
             navbar {
-
                 navbar-vertical-style-1 {
-
                     .navbar-top {
                         padding: 12px 0;
                         justify-content: center;
@@ -20,7 +16,6 @@ fuse-sidebar {
                         }
 
                         .logo {
-
                             .logo-icon {
                                 width: 32px;
                                 height: 32px;
@@ -33,7 +28,6 @@ fuse-sidebar {
                     }
 
                     .navbar-scroll-container {
-
                         .user {
                             padding: 12px 0;
                             height: 64px;
@@ -64,9 +58,7 @@ fuse-sidebar {
 
                             // Material 2 specific style
                             .material2 {
-
                                 .nav-item {
-
                                     .nav-link {
                                         border-radius: 20px;
                                         margin: 0 12px;
@@ -83,7 +75,6 @@ fuse-sidebar {
 }
 
 navbar {
-
     &.vertical-style-1 {
         display: flex;
         flex-direction: column;
@@ -92,9 +83,7 @@ navbar {
         height: 100%;
 
         &.right-navbar {
-
             .toggle-sidebar-opened {
-
                 mat-icon {
                     transform: rotate(180deg);
                 }
@@ -156,8 +145,11 @@ navbar {
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
 
-            background: linear-gradient(rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 30%),
-            linear-gradient(rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0) 40%);
+            background: linear-gradient(
+                    rgba(0, 0, 0, 0) 30%,
+                    rgba(0, 0, 0, 0) 30%
+                ),
+                linear-gradient(rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0) 40%);
 
             background-repeat: no-repeat;
             background-size: 100% 40px, 100% 10px;
@@ -192,7 +184,6 @@ navbar {
 
             .navbar-content {
                 flex: 1 1 auto;
-                padding-top: 32px;
             }
         }
     }
