--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -3,7 +3,7 @@
     [ngClass]="fuseConfig.layout.navbar.secondaryBackground"
 >
     <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/fuse.svg" />
+        <img class="logo-icon" src="assets/images/logos/logo.png" />
         <span class="logo-text secondary-text">ERA-APP</span>
     </div>
 
