--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.scss
@@ -4,6 +4,11 @@ fuse-sidebar {
     &.navbar-fuse-sidebar {
         overflow: hidden;
 
+        .logo-icon {
+            border: solid #ffffff 1px;
+            border-radius: 50%;
+            background: white;
+        }
         &.folded:not(.unfolded) {
             navbar {
                 navbar-vertical-style-1 {
