--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -23,7 +23,7 @@
                 *ngIf="horizontalNavbar"
             >
                 <div class="logo ml-16">
-                    <img class="logo-icon" src="assets/images/logos/fuse.svg" />
+                    <img class="logo-icon" src="assets/images/logos/logo.png" />
                 </div>
             </div>
         </div>
@@ -56,58 +56,15 @@
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
                 <button mat-menu-item>
                     <mat-icon>account_circle</mat-icon>
-                    <span>My Profile</span>
+                    <span>Account</span>
                 </button>
-
-                <button mat-menu-item class="">
-                    <mat-icon>mail</mat-icon>
-                    <span>Inbox</span>
-                </button>
-
                 <button mat-menu-item class="">
                     <mat-icon>exit_to_app</mat-icon>
                     <span>Logout</span>
                 </button>
             </mat-menu>
 
-            <div class="toolbar-separator"></div>
-
-            <mat-menu #languageMenu="matMenu" [overlapTrigger]="false">
-                <button
-                    mat-menu-item
-                    *ngFor="let lang of languages"
-                    (click)="setLanguage(lang)"
-                >
-                    <span fxLayout="row" fxLayoutAlign="start center">
-                        <img
-                            class="flag mr-16"
-                            [src]="'assets/icons/flags/' + lang.flag + '.png'"
-                        />
-                        <span class="iso">{{ lang.title }}</span>
-                    </span>
-                </button>
-
-                <button
-                    mat-menu-item
-                    [routerLink]="'/components/multi-language'"
-                >
-                    <div fxLayout="row" fxLayoutAlign="start center">
-                        <span>Learn more</span>
-                    </div>
-                </button>
-            </mat-menu>
-
             <div class="toolbar-separator" fxHide fxShow.gt-xs></div>
-
-            <button
-                mat-icon-button
-                fxHide.gt-md
-                class="chat-panel-toggle-button"
-                (click)="toggleSidebarOpen('chatPanel')"
-                aria-label="Toggle chat panel"
-            >
-                <mat-icon class="secondary-text">chat</mat-icon>
-            </button>
 
             <div class="toolbar-separator" fxHide.gt-md></div>
 
