--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 // Import app.theme.scss
 @import 'app/app.theme'; /* You can add global styles to this file, and also import other style files */
+@import '~firebaseui/dist/firebaseui.css';
 body {
     background: #d8d8d8 !important;
     .main-root {
