--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,33 +12,15 @@
             }"
         >
             <div class="logo">
-                <img src="assets/images/logos/fuse.svg" />
+                <img src="assets/images/logos/logo.png" />
             </div>
 
-            <div class="title">LOGIN TO YOUR ACCOUNT</div>
+            <div class="title">USE YOUR ACCOUNT</div>
 
-            <div class="separator">
-                <span class="text">OR</span>
-            </div>
-
-            <button mat-raised-button class="google">
-                Log in with Google
-            </button>
-
-            <button mat-raised-button class="facebook">
-                Log in with Facebook
-            </button>
-
-            <div
-                class="register"
-                fxLayout="column"
-                fxLayoutAlign="center center"
-            >
-                <span class="text">Don't have an account?</span>
-                <a class="link" [routerLink]="'/pages/auth/register'"
-                    >Create an account</a
-                >
-            </div>
+            <firebase-ui
+                (signInSuccessWithAuthResult)="successCallback($event)"
+                (signInFailure)="errorCallback($event)"
+            ></firebase-ui>
         </div>
     </div>
 </div>
