--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -43,7 +43,7 @@
                     <img
                         class="avatar mr-0 mr-sm-16"
                         [src]="userInfo.photoURL"
-                        (error)="
+                        onError="
                             this.src = 'assets/images/avatars/Velazquez.jpg'
                         "
                     />
