create new form

--- a/src/@appCore/modals/checker/checker.component.html
+++ b/src/@appCore/modals/checker/checker.component.html
@@ -27,10 +27,8 @@
         <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Name</mat-label>
-                    <mat-icon matSuffix class="secondary-text"
-                        >account_circle</mat-icon
-                    >
+                    <mat-label>Shop Name</mat-label>
+                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
                     <input
                         name="name"
                         formControlName="name"
@@ -42,10 +40,8 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Lastname</mat-label>
-                    <mat-icon matSuffix class="secondary-text"
-                        >account_circle</mat-icon
-                    >
+                    <mat-label>Secondary Name</mat-label>
+                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
                     <input
                         name="lastName"
                         formControlName="lastName"
@@ -56,8 +52,8 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Nickname</mat-label>
-                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
+                    <mat-label>Mobile number</mat-label>
+                    <mat-icon matSuffix class="secondary-text">phone</mat-icon>
                     <input
                         name="nickname"
                         formControlName="nickname"
@@ -89,7 +85,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Company</mat-label>
+                    <mat-label>domain</mat-label>
                     <mat-icon matSuffix class="secondary-text">domain</mat-icon>
                     <input name="company" formControlName="company" matInput />
                 </mat-form-field>
@@ -97,19 +93,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Job title</mat-label>
-                    <mat-icon matSuffix class="secondary-text">work</mat-icon>
-                    <input
-                        name="jobTitle"
-                        formControlName="jobTitle"
-                        matInput
-                    />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Birthday</mat-label>
+                    <mat-label>Founded</mat-label>
                     <input
                         matInput
                         [matDatepicker]="birthdayDatePicker"
@@ -138,7 +122,7 @@
                 fxLayoutAlign="start start"
             >
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Notes</mat-label>
+                    <mat-label>Notes / Description</mat-label>
                     <textarea
                         name="notes"
                         formControlName="notes"
