add major changes

--- a/src/@appCore/modals/checker/checker.component.html
+++ b/src/@appCore/modals/checker/checker.component.html
@@ -1,153 +1,109 @@
 <div class="dialog-content-wrapper">
-    <mat-toolbar matDialogTitle class="mat-accent m-0">
-        <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-            <span *ngIf="!isLoad" class="title dialog-title"
-                >Hello this may take a moment..</span
-            >
-            <span *ngIf="isLoad && !isReg" class="title dialog-title"
-                >Please provide shop information.</span
-            >
-        </mat-toolbar-row>
+  <mat-toolbar matDialogTitle class="mat-accent m-0">
+    <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
+      <span *ngIf="!isLoad" class="title dialog-title">Hello this may take a moment..</span>
+      <span *ngIf="isLoad && !isReg" class="title dialog-title">Please provide shop information.</span>
+    </mat-toolbar-row>
 
-        <mat-toolbar-row
-            class="toolbar-bottom py-16"
-            fxLayout="column"
-            fxLayoutAlign="center center"
-        >
-            <div class="contact-name mt-8"></div>
-        </mat-toolbar-row>
-    </mat-toolbar>
-    <ng-container *ngIf="!isLoad">
-        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-        <div class="validating-account">
-            <small>Validating account...</small>
-        </div>
-    </ng-container>
-    <div mat-dialog-content class="p-24 pb-0 m-0" fusePerfectScrollbar>
-        <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Shop Name</mat-label>
-                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
-                    <input
-                        name="name"
-                        formControlName="name"
-                        matInput
-                        required
-                    />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Secondary Name</mat-label>
-                    <mat-icon matSuffix class="secondary-text">star</mat-icon>
-                    <input
-                        name="lastName"
-                        formControlName="lastName"
-                        matInput
-                    />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Mobile number</mat-label>
-                    <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-                    <input
-                        name="nickname"
-                        formControlName="nickname"
-                        matInput
-                    />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Phone number</mat-label>
-                    <mat-icon matSuffix class="secondary-text">phone</mat-icon>
-                    <input formControlName="phone" matInput />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Email</mat-label>
-                    <mat-icon matSuffix class="secondary-text">email</mat-icon>
-                    <input
-                        name="email"
-                        formControlName="email"
-                        matInput
-                        type="email"
-                    />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>domain</mat-label>
-                    <mat-icon matSuffix class="secondary-text">domain</mat-icon>
-                    <input name="company" formControlName="company" matInput />
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Founded</mat-label>
-                    <input
-                        matInput
-                        [matDatepicker]="birthdayDatePicker"
-                        name="birthday"
-                        formControlName="birthday"
-                    />
-                    <mat-datepicker-toggle
-                        matSuffix
-                        [for]="birthdayDatePicker"
-                    ></mat-datepicker-toggle>
-                    <mat-datepicker #birthdayDatePicker></mat-datepicker>
-                </mat-form-field>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Address</mat-label>
-                    <mat-icon matSuffix class="secondary-text">home</mat-icon>
-                    <input name="address" formControlName="address" matInput />
-                </mat-form-field>
-            </div>
-
-            <div
-                fxLayout="row"
-                class="textarea-wrapper"
-                fxLayoutAlign="start start"
-            >
-                <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Notes / Description</mat-label>
-                    <textarea
-                        name="notes"
-                        formControlName="notes"
-                        matInput
-                        type="text"
-                        max-rows="4"
-                    ></textarea>
-                </mat-form-field>
-            </div>
-        </form>
+    <mat-toolbar-row class="toolbar-bottom py-16" fxLayout="column" fxLayoutAlign="center center">
+      <div class="contact-name mt-8"></div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <ng-container *ngIf="!isLoad">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    <div class="validating-account">
+      <small>Validating account...</small>
     </div>
+  </ng-container>
+  <div mat-dialog-content class="p-24 pb-0 m-0" fusePerfectScrollbar>
+    <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Shop Name</mat-label>
+          <mat-icon matSuffix class="secondary-text">star</mat-icon>
+          <input name="name" formControlName="name" matInput required />
+        </mat-form-field>
+      </div>
 
-    <div
-        mat-dialog-actions
-        class="m-0 p-16"
-        fxLayout="row"
-        fxLayoutAlign="end center"
-    >
-        <button
-            mat-button
-            class="save-button"
-            (click)="matDialogRef.close()"
-            aria-label="SAVE"
-        >
-            Close
-        </button>
-    </div>
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Secondary Name</mat-label>
+          <mat-icon matSuffix class="secondary-text">star</mat-icon>
+          <input name="secondName" formControlName="secondName" matInput />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Mobile number</mat-label>
+          <mat-icon matSuffix class="secondary-text">phone</mat-icon>
+          <input name="mobile" formControlName="mobile" matInput />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Phone number</mat-label>
+          <mat-icon matSuffix class="secondary-text">phone</mat-icon>
+          <input name="phone" formControlName="phone" matInput />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Email</mat-label>
+          <mat-icon matSuffix class="secondary-text">email</mat-icon>
+          <input name="email" formControlName="email" matInput type="email" />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>domain</mat-label>
+          <mat-icon matSuffix class="secondary-text">domain</mat-icon>
+          <input name="domain" formControlName="domain" matInput />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Founded</mat-label>
+          <input matInput [matDatepicker]="birthdayDatePicker" name="founded" formControlName="founded" />
+          <mat-datepicker-toggle matSuffix [for]="birthdayDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #birthdayDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Address</mat-label>
+          <mat-icon matSuffix class="secondary-text">home</mat-icon>
+          <input
+            ngx-google-places-autocomplete
+            [options]="{
+              types: [],
+              componentRestrictions: { country: 'PH' }
+            }"
+            (onAddressChange)="handleAddressChange($event)"
+            #placesRef="ngx-places"
+            name="address"
+            formControlName="address"
+            matInput
+          />
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row" class="textarea-wrapper" fxLayoutAlign="start start">
+        <mat-form-field appearance="outline" fxFlex>
+          <mat-label>Notes / Description</mat-label>
+          <textarea name="notes" formControlName="notes" matInput type="text" max-rows="4"></textarea>
+        </mat-form-field>
+      </div>
+    </form>
+  </div>
+  <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="end center" fxFill>
+    <button mat-raised-button class="save-button" (click)="onSave()" aria-label="SAVE">
+      Save
+    </button>
+  </div>
 </div>
