--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,13 @@
 
 <!-- VERTICAL LAYOUT 1 -->
 <ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-1'">
-    <vertical-layout-1></vertical-layout-1>
+  <vertical-layout-1></vertical-layout-1>
 </ng-container>
 <!-- / VERTICAL LAYOUT 1 -->
 
 <!-- THEME OPTIONS PANEL -->
 
-<fuse-sidebar
-    name="themeOptionsPanel"
-    class="theme-options-sidebar"
-    position="right"
-    [invisibleOverlay]="true"
->
-    <fuse-theme-options></fuse-theme-options>
+<fuse-sidebar name="themeOptionsPanel" class="theme-options-sidebar" position="right" [invisibleOverlay]="true">
+  <fuse-theme-options></fuse-theme-options>
 </fuse-sidebar>
 <!-- / THEME OPTIONS PANEL -->
