--- a/src/@appCore/modals/checker/checker.component.html
+++ b/src/@appCore/modals/checker/checker.component.html
@@ -15,6 +15,12 @@
       <small>Validating account...</small>
     </div>
   </ng-container>
+  <ng-container *ngIf="isSaving">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    <div class="validating-account">
+      <small>Saving shop information ...</small>
+    </div>
+  </ng-container>
   <div mat-dialog-content class="p-24 pb-0 m-0" fusePerfectScrollbar>
     <form [formGroup]="contactForm" *ngIf="isLoad && !isReg">
       <div fxLayout="row" fxLayoutAlign="start start">
@@ -86,15 +92,9 @@
       </div>
 
       <div fxLayout="row" fxLayoutAlign="start start">
-        <mat-form-field appearance="outline" fxFlex>
+        <mat-form-field appearance="outline" (click)="birthdayDatePicker.open()" fxFlex>
           <mat-label>Founded</mat-label>
-          <input
-            matInput
-            [matDatepicker]="birthdayDatePicker"
-            (click)="birthdayDatePicker.open()"
-            name="founded"
-            formControlName="founded"
-          />
+          <input matInput [matDatepicker]="birthdayDatePicker" name="founded" formControlName="founded" />
           <mat-datepicker-toggle matSuffix [for]="birthdayDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #birthdayDatePicker></mat-datepicker>
         </mat-form-field>
