--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,12 @@
 @import 'app/app.theme'; /* You can add global styles to this file, and also import other style files */
 @import '~firebaseui/dist/firebaseui.css';
 body {
-    background: #d8d8d8 !important;
-    .main-root {
-        background: white;
-    }
+  background: #d8d8d8 !important;
+  .main-root {
+    background: white;
+  }
+}
+
+.pad-10 {
+  padding: 10px !important;
 }
