add orders and order details

--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -116,7 +116,7 @@
           *matRowDef="let order; columns: displayedColumns"
           class="order"
           matRipple
-          [routerLink]="'/apps/e-commerce/orders/' + order.id"
+          [routerLink]="'/orders/details/' + order.id"
         >
         </mat-row>
       </mat-table>
