--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -36,7 +36,7 @@
       <!-- ADD BUTTON -->
       <button
         mat-raised-button
-        [routerLink]="'/apps/e-commerce/products/new'"
+        [routerLink]="'/products/create/new'"
         class="add-product-button fuse-white mt-24 mt-md-0"
       >
         <span>ADD NEW PRODUCT</span>
@@ -60,20 +60,6 @@
           <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
           <mat-cell *matCellDef="let product">
             <p class="text-truncate">{{ product.id }}</p>
-          </mat-cell>
-        </ng-container>
-
-        <!-- Image Column -->
-        <ng-container matColumnDef="image">
-          <mat-header-cell *matHeaderCellDef></mat-header-cell>
-          <mat-cell *matCellDef="let product">
-            <img
-              class="product-image"
-              *ngIf="product.featuredImageId"
-              [alt]="product.name"
-              [src]="product.images[product.featuredImageId].url"
-            />
-            <img *ngIf="!product.featuredImageId" [src]="'assets/images/ecommerce/product-image-placeholder.png'" />
           </mat-cell>
         </ng-container>
 
