--- a/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
+++ b/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
@@ -1,4 +1,4 @@
-<div id="product" class="page-layout carded fullwidth inner-scroll">
+<div id="shopservice-details" class="page-layout carded fullwidth inner-scroll">
   <!-- TOP BACKGROUND -->
   <div class="top-bg accent"></div>
   <!-- / TOP BACKGROUND -->
@@ -22,10 +22,10 @@
             {{ product.name }}
           </div>
           <div class="h2" *ngIf="pageType === 'new'">
-            New Product
+            New Service
           </div>
           <div class="subtitle secondary-text">
-            <span>Product Detail</span>
+            <span>Service Detail</span>
           </div>
         </div>
       </div>
