--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -67,7 +67,7 @@ $typography: mat-typography-config(
   $title: mat-typography-level(20px, 32px, 600),
   $body-2: mat-typography-level(14px, 24px, 600),
   $button: mat-typography-level(14px, 14px, 600),
-  $input: mat-typography-level(16px, 1.125, 400) // line-height must be unitless !!!,,,,,,,,,,,,,,,
+  $input: mat-typography-level(16px, 1.125, 400) // line-height must be unitless !!!,,,,,,,,,,,,,,,,,,
 );
 
 // Setup the typography
@@ -77,50 +77,12 @@ $typography: mat-typography-config(
 // @ Component theming
 // -----------------------------------------------------------------------------------------------------
 
-// @import 'src/app/layout/components/toolbar/toolbar.theme';
-// @import 'src/app/main/apps/academy/academy.theme';
-// @import 'src/app/main/apps/calendar/calendar.theme';
-// @import 'src/app/main/apps/contacts/contacts.theme';
-// @import 'src/app/main/apps/dashboards/project/project.theme';
-// @import 'src/app/main/apps/e-commerce/orders/orders.theme';
-// @import 'src/app/main/apps/e-commerce/products/products.theme';
-// @import 'src/app/main/apps/file-manager/file-manager.theme';
-// @import 'src/app/main/apps/mail/mail.theme';
-// @import 'src/app/main/apps/mail-ngrx/mail.theme';
-// @import 'src/app/main/apps/scrumboard/scrumboard.theme';
-// @import 'src/app/main/apps/todo/todo.theme';
-
-// @import 'src/app/main/pages/authentication/login/login.theme';
-// @import 'src/app/main/pages/authentication/login-2/login-2.theme';
-// @import 'src/app/main/pages/authentication/register/register.theme';
-// @import 'src/app/main/pages/authentication/register-2/register-2.theme';
-// @import 'src/app/main/pages/authentication/reset-password/reset-password.theme';
-// @import 'src/app/main/pages/authentication/reset-password-2/reset-password-2.theme';
-// @import 'src/app/main/pages/authentication/forgot-password/forgot-password.theme';
-// @import 'src/app/main/pages/authentication/forgot-password-2/forgot-password-2.theme';
-// @import 'src/app/main/pages/authentication/lock/lock.theme';
-// @import 'src/app/main/pages/authentication/mail-confirm/mail-confirm.theme';
-// @import 'src/app/main/pages/coming-soon/coming-soon.theme';
-// @import 'src/app/main/pages/errors/404/error-404.theme';
-// @import 'src/app/main/pages/errors/500/error-500.theme';
-// @import 'src/app/main/pages/maintenance/maintenance.theme';
-// @import 'src/app/main/pages/pricing/style-1/style-1.theme';
-// @import 'src/app/main/pages/pricing/style-2/style-2.theme';
-// @import 'src/app/main/pages/pricing/style-3/style-3.theme';
-// @import 'src/app/main/pages/profile/tabs/about/about.theme';
-// @import 'src/app/main/pages/profile/tabs/photos-videos/photos-videos.theme';
-// @import 'src/app/main/pages/profile/tabs/timeline/timeline.theme';
-// @import 'src/app/main/pages/search/classic/search-classic.theme';
-// @import 'src/app/main/pages/search/modern/search-modern.theme';
-// @import 'src/app/main/pages/faq/faq.theme';
-// @import 'src/app/main/pages/knowledge-base/knowledge-base.theme';
-
-// @import 'src/app/main/ui/cards/cards.theme';
-
 @import 'src/app/pages/login/login.theme';
 @import 'src/app/pages/appointments/calendar.theme';
 @import 'src/app/pages/orders/orders.theme';
 @import 'src/app/pages/products/products.theme';
+@import 'src/app/pages/mechanics/mechanics.theme';
+@import 'src/app/pages/shopservices/shopservices.theme';
 
 // Define a mixin for easier access
 @mixin components-theme($theme) {
@@ -129,6 +91,8 @@ $typography: mat-typography-config(
   @include calendar-theme($theme);
   @include e-commerce-orders-theme($theme);
   @include app-products($theme);
+  @include personnel-theme($theme);
+  @include app-shopservices($theme);
 }
 
 // -----------------------------------------------------------------------------------------------------
