--- a/src/app/pages/mechanics/mechanics.component.html
+++ b/src/app/pages/mechanics/mechanics.component.html
@@ -23,7 +23,7 @@
           >account_box
         </mat-icon>
         <span class="logo-text h1" [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }">
-          Contacts
+          Personnel
         </span>
       </div>
     </div>
