--- a/src/app/pages/shopservices/shopservices.component.html
+++ b/src/app/pages/shopservices/shopservices.component.html
@@ -125,7 +125,7 @@
           *matRowDef="let product; columns: displayedColumns"
           class="product"
           matRipple
-          [routerLink]="'/products/details/' + product.id + '/' + product.handle"
+          [routerLink]="'/shopservices/details/' + product.id + '/' + product.handle"
         >
         </mat-row>
       </mat-table>
