--- a/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
+++ b/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
@@ -9,7 +9,7 @@
     <div class="header accent" fxLayout="row" fxLayoutAlign="space-between center">
       <!-- APP TITLE -->
       <div fxLayout="row" fxLayoutAlign="start center">
-        <button mat-icon-button class="mr-0 mr-sm-16" [routerLink]="'/products'">
+        <button mat-icon-button class="mr-0 mr-sm-16" [routerLink]="'/shopservices'">
           <mat-icon>arrow_back</mat-icon>
         </button>
 
@@ -19,7 +19,7 @@
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
         >
           <div class="h2" *ngIf="pageType === 'edit'">
-            {{ product.name }}
+            {{ serviceModel.name }}
           </div>
           <div class="h2" *ngIf="pageType === 'new'">
             New Service
@@ -34,7 +34,7 @@
       <button
         mat-raised-button
         class="save-product-button"
-        [disabled]="productForm.invalid"
+        [disabled]="serviceForm.invalid"
         *ngIf="pageType === 'new'"
         (click)="addProduct()"
       >
@@ -44,7 +44,7 @@
       <button
         mat-raised-button
         class="save-product-button"
-        [disabled]="productForm.invalid || productForm.pristine"
+        [disabled]="serviceForm.invalid || serviceForm.pristine"
         *ngIf="pageType === 'edit'"
         (click)="saveProduct()"
       >
@@ -57,63 +57,25 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <form name="productForm" [formGroup]="productForm" class="product w-100-p" fxLayout="column" fxFlex>
+        <form name="serviceForm" [formGroup]="serviceForm" class="product w-100-p" fxLayout="column" fxFlex>
           <mat-tab-group>
             <mat-tab label="Basic Info">
               <div class="tab-content p-24" fusePerfectScrollbar>
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Product Name</mat-label>
-                  <input matInput placeholder="Product Name" name="name" formControlName="name" required />
+                  <mat-label>Service Name</mat-label>
+                  <input matInput placeholder="Service Name" name="name" formControlName="name" required />
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Product Description</mat-label>
+                  <mat-label>Service Description</mat-label>
                   <textarea
                     matInput
-                    placeholder="Product Description"
+                    placeholder="Service Description"
                     name="description"
                     formControlName="description"
                     rows="5"
                   >
                   </textarea>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Categories</mat-label>
-
-                  <mat-chip-list #categoryList name="categories" formControlName="categories">
-                    <mat-chip
-                      *ngFor="let category of product.categories"
-                      [removable]="true"
-                      (removed)="product.removeCategory(category)"
-                    >
-                      {{ category }}
-                      <mat-icon matChipRemove>cancel</mat-icon>
-                    </mat-chip>
-
-                    <input
-                      [matChipInputFor]="categoryList"
-                      [matChipInputAddOnBlur]="true"
-                      (matChipInputTokenEnd)="product.addCategory($event)"
-                    />
-                  </mat-chip-list>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Tags</mat-label>
-
-                  <mat-chip-list #tagList name="tags" formControlName="tags">
-                    <mat-chip *ngFor="let tag of product.tags" [removable]="true" (removed)="product.removeTag(tag)">
-                      {{ tag }}
-                      <mat-icon matChipRemove>cancel</mat-icon>
-                    </mat-chip>
-
-                    <input
-                      [matChipInputFor]="tagList"
-                      [matChipInputAddOnBlur]="true"
-                      (matChipInputTokenEnd)="product.addTag($event)"
-                    />
-                  </mat-chip-list>
                 </mat-form-field>
               </div>
             </mat-tab>
@@ -121,15 +83,15 @@
             <mat-tab label="Pricing">
               <div class="tab-content p-24" fusePerfectScrollbar>
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Tax Excluded Price</mat-label>
+                  <mat-label>Price</mat-label>
                   <input
                     matInput
                     placeholder="Tax Excluded Price"
                     name="priceTaxExcl"
-                    formControlName="priceTaxExcl"
+                    formControlName="price"
                     type="number"
                   />
-                  <span matPrefix>$&nbsp;</span>
+                  <span matPrefix>₱&nbsp;</span>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
@@ -137,86 +99,83 @@
                   <input
                     matInput
                     placeholder="Tax Included Price"
-                    name="priceTaxIncl"
-                    formControlName="priceTaxIncl"
+                    name="taxRate"
+                    formControlName="taxRate"
                     type="number"
                   />
-                  <span matPrefix>$&nbsp;</span>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Tax Rate</mat-label>
-                  <input matInput placeholder="Tax Rate" name="taxRate" formControlName="taxRate" type="number" />
-                  <span matPrefix>&#37;&nbsp;</span>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Compared Price</mat-label>
-                  <input
-                    matInput
-                    placeholder="Compared Price"
-                    name="comparedPrice"
-                    formControlName="comparedPrice"
-                    type="number"
-                  />
-                  <span matPrefix>$&nbsp;</span>
-                  <mat-hint align="start">Add a compare price to show next to the real price </mat-hint>
+                  <span matPrefix>₱&nbsp;</span>
                 </mat-form-field>
               </div>
             </mat-tab>
 
-            <mat-tab label="Inventory">
+            <mat-tab label="Tags">
               <div class="tab-content p-24" fusePerfectScrollbar>
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>SKU</mat-label>
-                  <input matInput placeholder="SKU" name="sku" formControlName="sku" />
+                  <mat-label>Select Catergory</mat-label>
+                  <mat-chip-list #chipList aria-label="category selection">
+                    <mat-chip
+                      *ngFor="let category of serviceCategory"
+                      [selectable]="selectable"
+                      [removable]="true"
+                      (removed)="remove(category)"
+                    >
+                      {{ category }}
+                      <mat-icon matChipRemove>cancel</mat-icon>
+                    </mat-chip>
+                    <input
+                      placeholder="Categories..."
+                      #categoriesInput
+                      [formControl]="categoriestCtrl"
+                      [matAutocomplete]="auto"
+                      [matChipInputFor]="chipList"
+                      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                      (matChipInputTokenEnd)="add($event)"
+                    />
+                  </mat-chip-list>
+                  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                    <mat-option *ngFor="let category of filteredCategories | async" [value]="category">
+                      {{ category }}
+                    </mat-option>
+                  </mat-autocomplete>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Quantity</mat-label>
-                  <input matInput placeholder="Quantity" name="quantity" formControlName="quantity" type="number" />
+                  <mat-label>Select Personnel</mat-label>
+                  <mat-chip-list #chipList aria-label="personnel selection">
+                    <mat-chip
+                      *ngFor="let personnel of servicePersonnel"
+                      [selectable]="selectable"
+                      [removable]="true"
+                      (removed)="remove(personnel)"
+                    >
+                      {{ personnel }}
+                      <mat-icon matChipRemove>cancel</mat-icon>
+                    </mat-chip>
+                    <input
+                      placeholder="Personnel..."
+                      #personnelInput
+                      [formControl]="personneltCtrl"
+                      [matAutocomplete]="auto"
+                      [matChipInputFor]="chipList"
+                      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                      (matChipInputTokenEnd)="addPersonnel($event)"
+                    />
+                  </mat-chip-list>
+                  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedPersonnel($event)">
+                    <mat-option *ngFor="let personnel of filteredPersonnels | async" [value]="personnel">
+                      {{ personnel }}
+                    </mat-option>
+                  </mat-autocomplete>
                 </mat-form-field>
               </div>
             </mat-tab>
 
-            <mat-tab label="Shipping">
+            <mat-tab label="Duration">
               <div class="tab-content p-24" fusePerfectScrollbar fxLayout="column">
-                <div fxLayout="row" fxLayoutAlign="space-between">
-                  <mat-form-field appearance="outline" floatLabel="always" fxFlex="30">
-                    <mat-label>Width</mat-label>
-                    <input matInput placeholder="Width" name="Width" formControlName="width" />
-                    <span matSuffix>cm</span>
-                  </mat-form-field>
-
-                  <mat-form-field appearance="outline" floatLabel="always" fxFlex="30">
-                    <mat-label>Height</mat-label>
-                    <input matInput placeholder="Height" name="Height" formControlName="height" />
-                    <span matSuffix>cm</span>
-                  </mat-form-field>
-
-                  <mat-form-field appearance="outline" floatLabel="always" fxFlex="30">
-                    <mat-label>Depth</mat-label>
-                    <input matInput placeholder="Depth" name="Depth" formControlName="depth" />
-                    <span matSuffix>cm</span>
-                  </mat-form-field>
-                </div>
-
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Weight</mat-label>
-                  <input matInput placeholder="Weight" name="Weight" formControlName="weight" />
-                  <span matSuffix>kg</span>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Extra Shipping Fee</mat-label>
-                  <input
-                    matInput
-                    placeholder="Extra Shipping Fee"
-                    name="extraShippingFee"
-                    formControlName="extraShippingFee"
-                    type="number"
-                  />
-                  <span matPrefix>$&nbsp;</span>
+                  <mat-label>expected hours of work</mat-label>
+                  <input matInput placeholder="hours" name="hours" formControlName="hours" />
+                  <span matSuffix>hrs</span>
                 </mat-form-field>
               </div>
             </mat-tab>
