--- a/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
+++ b/src/app/pages/shopservices/shopservice-details/shopservice-details.component.html
@@ -80,10 +80,10 @@
               </div>
             </mat-tab>
 
-            <mat-tab label="Pricing">
+            <mat-tab label="Pricing & Items">
               <div class="tab-content p-24" fusePerfectScrollbar>
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Price</mat-label>
+                  <mat-label>Service Price</mat-label>
                   <input
                     matInput
                     placeholder="Tax Excluded Price"
@@ -93,18 +93,56 @@
                   />
                   <span matPrefix>₱&nbsp;</span>
                 </mat-form-field>
+                <div fxLayout="row" fxLayoutAlign="space-between">
+                  <mat-form-field appearance="outline" floatLabel="always" fxFlex="30">
+                    <mat-label>Total Price</mat-label>
+                    <input
+                      matInput
+                      placeholder="Tax Excluded Price"
+                      name="priceTaxExcl"
+                      formControlName="price"
+                      type="number"
+                    />
+                    <span matPrefix>₱&nbsp;</span>
+                  </mat-form-field>
+                  <button
+                    mat-mini-fab
+                    color="mat-primary"
+                    class="add-file-button"
+                    (click)="openProducFinder()"
+                    aria-label="Add file"
+                  >
+                    <mat-icon>add</mat-icon>
+                  </button>
+                </div>
 
-                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-                  <mat-label>Tax Included Price</mat-label>
-                  <input
-                    matInput
-                    placeholder="Tax Included Price"
-                    name="taxRate"
-                    formControlName="taxRate"
-                    type="number"
-                  />
-                  <span matPrefix>₱&nbsp;</span>
-                </mat-form-field>
+                <table class="simple">
+                  <thead>
+                    <tr>
+                      <th class="w-20">ID</th>
+                      <th class="w-20">Name</th>
+                      <th class="w-20">Price</th>
+                      <th class="w-20">Quantity</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="product-row">
+                      <td>
+                        dsadasdsa
+                      </td>
+
+                      <td>
+                        dadsadas
+                      </td>
+                      <td>
+                        231312321
+                      </td>
+                      <td>
+                        3
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </mat-tab>
 
@@ -141,12 +179,12 @@
 
                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
                   <mat-label>Select Personnel</mat-label>
-                  <mat-chip-list #chipList aria-label="personnel selection">
+                  <mat-chip-list #personnelList aria-label="personnel selection">
                     <mat-chip
                       *ngFor="let personnel of servicePersonnel"
                       [selectable]="selectable"
                       [removable]="true"
-                      (removed)="remove(personnel)"
+                      (removed)="removePersonnel(personnel)"
                     >
                       {{ personnel }}
                       <mat-icon matChipRemove>cancel</mat-icon>
@@ -155,13 +193,13 @@
                       placeholder="Personnel..."
                       #personnelInput
                       [formControl]="personneltCtrl"
-                      [matAutocomplete]="auto"
-                      [matChipInputFor]="chipList"
+                      [matAutocomplete]="autoPersonnel"
+                      [matChipInputFor]="personnelList"
                       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                       (matChipInputTokenEnd)="addPersonnel($event)"
                     />
                   </mat-chip-list>
-                  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedPersonnel($event)">
+                  <mat-autocomplete #autoPersonnel="matAutocomplete" (optionSelected)="selectedPersonnel($event)">
                     <mat-option *ngFor="let personnel of filteredPersonnels | async" [value]="personnel">
                       {{ personnel }}
                     </mat-option>
